package fr.joellejulie.dto;

public class SeatingDto {
    private Long id;
    private Long flightId;
    private Long checkinId;
    private String seatNumber;
}
